# torchestra

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/torchestra/: __init__.py  _debugging.py  _lookups.py  _normalization.py  _pipes.py  _sparse_slices.py  _stats_plan.py  _wrappers.py  test_debugging.py  test_lookups.py  test_normalization.py  test_pipes.py  test_sparse_slices.py  test_stats_plan.py  test_wrappers.py
